--- a/cacophony.html
+++ b/cacophony.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Cacophony
+title: Blog
 ---
 
-# Cacophony
+# Blog
 
-Welcome to the Cacophony section of my blog! Here, you'll find a mix of various topics, ideas, and musings that don't fit neatly into other categories.
+Welcome to the Blog section of my blog! Here, you'll find a mix of various topics, ideas, and musings that don't fit neatly into other categories.
 
 ## All Posts
 
@@ -15,17 +15,3 @@ Welcome to the Cacophony section of my blog! Here, you'll find a mix of various 
   <p>{{ post.date | date: "%Y-%m-%d" }}</p>
   <p>{{ post.excerpt }}</p>
 {% endfor %}
-
-## What to Expect
-
-- Random thoughts and observations
-- Interesting facts and trivia
-- Creative writing snippets
-- Tech-related shower thoughts
-- Anything else that comes to mind!
-
-This section is all about embracing the beautiful chaos of ideas. Check back often for new and unexpected content!
-
----
-
-*"In all chaos there is a cosmos, in all disorder a secret order." - Carl Jung*
