podcast notes correct

--- a/podcasts.html
+++ b/podcasts.html
@@ -22,7 +22,7 @@ title: Podcasts
 
 <h2>Podcasts</h2>
 
-<p>Click the button below to visit my podcast page:</p>
+<p>Click the button below to visit my NotebookLM podcast page:</p>
 
 <a href="https://sqh2guido.podbean.com/" target="_blank" class="podcast-button">Listen to My Podcasts</a>
 
